# knative-on-azure

./: .gitignore  AGENTS.md  DEBUG-broker-to-asb.md  Makefile  README.md  mkdocs.yml
.github/workflows/: docs.yml
camel-quarkus/: pom.xml
demo/: docker-compose.yml
demo/backend/: Dockerfile  main.py  requirements.txt
demo/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
demo/jupyter/: Dockerfile
demo/k8s/: asb-secret.yaml  backend.yaml  jupyter.yaml  trigger.yaml
demo/notebooks/: demo.ipynb  jupyter_lite_config.json
docs/: acmeservice.md  architecture.md  gitops.md  index.md  phase0-recon.md  prerequisites.md  security.md  teardown.md  troubleshooting.md
docs/deploy/: 01-infrastructure.md  02-knative.md  03-kafka-broker.md  04-demo-app.md  (+3 more)
k8s/: README.md  root-app.yaml
messaging/: __init__.py  bus.py  models.py  protocols.py  pyproject.toml
messaging/dapr/: __init__.py  publisher.py
messaging/knative/: __init__.py  publisher.py  subscriber.py
oauthbearer-poc/: .gitignore  Dockerfile.dispatcher  Dockerfile.receiver  build-conduktor-jar.sh  setup-oauthbearer-poc.sh
scripts/: fix-kafka-dispatcher.sh  install-camel-k.sh  install-knative.sh  reinstall-kafka-components.sh  send-test-asb.sh  setup-camel-integrations.sh  setup-eventhubs-source.sh  setup-kafka-broker.sh  setup-kafka-source.sh  setup-workload-identity.sh  test-asb-inspect.sh
terraform/: acr.tf  aks.tf  argocd.tf  dapr.tf  eventhubs.tf  kro.tf  network.tf  outputs.tf  providers.tf  servicebus.tf  terraform.tfvars.example  variables.tf  workload-identity.tf
(+46 files in other folders)
