[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messaging"
version = "0.1.0"
description = "CloudEvents messaging abstraction library for KNative Eventing"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.25",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "httpx",
]
